# cygnus-jet-utac

./: .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  LICENSE-DOCS  README.md  RELEASE_GUIDE.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
cygnus_jet_utac/: __init__.py  _genesis_stubs.py  accretion.py  benchmark.py  cli.py  constants.py  efficiency.py  jet.py  mirror_jet.py  orbital.py  stellar_wind.py  system.py
data/: cygnus_x1_radio_epochs.yaml  prabu2026_measurements.yaml
docs/: benchmark_report.md  physics_derivation.md  zenodo_metadata.yaml
notebooks/: 01_cygnus_utac_overview.ipynb  02_jet_dance_simulation.ipynb  03_benchmark_prabu2026.ipynb  04_efficiency_crep_inversion.ipynb
tests/: test_accretion.py  test_benchmark.py  test_cli.py  test_diamond_interface.py  test_efficiency.py  test_jet.py  test_mirror_jet.py  test_orbital.py  test_preset.py  test_stellar_wind.py  test_validator.py
