[project]
name = "cygnus-jet-utac"
version = "1.0.0"
description = "GenesisAeon Package 17: Cygnus X-1 Relativistic Jet as UTAC System"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Johann Römer", email = "" }]
requires-python = ">=3.10"
keywords = [
    "black holes",
    "relativistic jets",
    "UTAC",
    "CREP",
    "self-organized criticality",
    "GenesisAeon",
    "Cygnus X-1",
    "accretion disk",
    "coherence resonance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pandas>=2.0",
    "pyyaml>=6.0",
    "astropy>=5.3",
    "tqdm>=4.65",
    "rich>=13.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
genesis = ["genesis-os>=1.0.0"]
notebooks = ["jupyter", "ipywidgets", "plotly", "nbconvert"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=5.0",
    "ruff>=0.6.0",
    "mypy>=1.10",
]

[project.scripts]
cygnus-jet = "cygnus_jet_utac.cli:main"

[project.urls]
"Repository" = "https://github.com/GenesisAeon/cygnus-jet-utac"
"GenesisAeon Ecosystem" = "https://github.com/GenesisAeon"
"Zenodo" = "https://doi.org/10.5281/zenodo.19645351"
"Reference Paper" = "https://doi.org/10.1038/s41550-026-02828-3"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cygnus_jet_utac"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "B", "I", "W", "UP", "C4", "SIM"]
ignore = ["B008", "SIM108"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=cygnus_jet_utac --cov-report=term-missing -v"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["cygnus_jet_utac"]
omit = ["tests/*", "cygnus_jet_utac/cli.py", "src/*"]

[tool.coverage.report]
fail_under = 80

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
